<resources>
    <string name="app_name">ToDoList</string>
    <string name="current_tasks">Текущие задачи</string>
    <string name="add_task">Добавить задачу</string>
    <string name="title_activity_new_task">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="newTask_name">Название задачи</string>
    <string name="newTask_description">Описание</string>
    <string name="priority">Приоритет</string>
    <string name="priority_high">high</string>
    <string name="priority_medium">medium</string>
    <string name="priority_low">low</string>
    <string name="button_save">Сохранить</string>
    <string name="labelCurrentTasks">Текущие задачи</string>
    <string name="labelNewTask">Новая задача</string>
    <string name="text_choose">ВЫБЕРИТЕ ДЕЙСТВИЕ</string>
    <string name="sortByDate">По дате</string>
    <string name="sortByPriority">По приоритету</string>
    <string name="date">Выбрать дату</string>
</resources>
