<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:orientation="vertical"
    android:background="@null"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="150dp"
        android:text="@string/text_choose"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="17sp" />

    <Button
        android:id="@+id/button"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20sp"
        android:background="@drawable/rounded_button"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:text="@string/current_tasks"
        android:textColor="@color/white"
        android:textSize="17sp"
        android:onClick="current_tasks_click"/>

    <Button
        android:id="@+id/button1"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:background="@drawable/rounded_button"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:text="@string/add_task"
        android:textColor="@color/white"
        android:textSize="17sp"
        android:onClick="new_task_click"/>

</LinearLayout>